[gd_scene load_steps=5 format=3 uid="uid://bk5rb8acl487u"]

[ext_resource type="Texture2D" uid="uid://d3cncwj2pecb1" path="res://art/bus.png" id="1_bju55"]
[ext_resource type="Script" uid="uid://byb2ikl6l05sr" path="res://train.gd" id="1_lomod"]

[sub_resource type="SpriteFrames" id="SpriteFrames_lomod"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_bju55")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kfycv"]
size = Vector2(9.5, 9)

[node name="train" type="Area2D"]
script = ExtResource("1_lomod")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lomod")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kfycv")

[node name="BoardingTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="BoardingTimer" to="." method="_on_boarding_timer_timeout"]
